# CrearAppFullDjango

./: .gitignore  README.md  pyproject.toml
src/app_full_django/: crear_app.py
src/crear_app_full_django/: createAppFullDjango.py
